# bar-code-reader

./: CMakeLists.txt  README.md  build_and_run.sh  quick_run_and_stat.sh
data/: compare_1.txt  compare_2.txt  compare_3.txt  compare_5.txt  compare_7.txt  output.txt  truth.txt  truth2.txt  try_1.txt  try_2.txt  try_5.txt  try_7.txt
include/: localization.hpp  utils.hpp
src/: localization.cpp  main.cpp  utils.cpp
